--- a/main.css
+++ b/main.css
@@ -502,10 +502,11 @@ single product */
         padding-left: 20px;
         color: #1a1a1a;
     }
-    #close{
+    #close i{
         position: absolute;
         top: 30px;
         right: 30px;
+        font-size: 24px;
         color: #222;
     }
     #hero {
@@ -571,5 +572,16 @@ single product */
     }
     #sm-banner .banner-box2 {
         margin-top: 20px;
+    }
+    /* single product */
+    #pro-details {
+        display: flex;
+        flex-direction: column;
+    }
+    #pro-details .single-pro-img,
+    #pro-details .single-pro-detail
+    {
+        width: 100%;
+        margin-right: 0px;
     }
 }
